# api/v1/docs/swagger.json
@@ -33,16 +33,36 @@
                 }
             }
         },
-        "/board/:id": {
+        "/board/:uid": {
             "get": {
-                "description": "Return board with given id",
+                "description": "Return board with unique id",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Boards"
                 ],
-                "summary": "Return board with given id",
+                "summary": "Return board with unique id",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Board"
+                        }
+                    }
+                }
+            }
+        },
+        "/board/new": {
+            "post": {
+                "description": "Create a new board",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Boards"
+                ],
+                "summary": "Create a new board",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -81,13 +101,16 @@
         "models.Board": {
             "type": "object",
             "properties": {
-                "description": {
+                "created_at": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "name": {
+                "title": {
+                    "type": "string"
+                },
+                "unique_id": {
                     "type": "string"
                 }
             }
